<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scuttloid</string>
    <string name="title_bookmark_detail">Bookmark Details</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="title_bookmark_edit">Edit Bookmark</string>
    <string name="title_bookmark_add">Add Bookmark</string>
    <string name="url_label">URL:</string>
    <string name="title_label">Title:</string>
    <string name="description_label">Description:</string>
    <string name="tags_label">Tags:</string>
    <string name="status_label">Privacy:</string>
    <string name="status_prompt">Select Privacy Status</string>
    <string-array name="status_options">
        <item>Public</item>
        <item>Shared with Watched List</item>
        <item>Private</item>
    </string-array>
    <string-array name="status_keys">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="save">Save</string>
    <string name="adding_bookmark">Adding Bookmark</string>
    <string name="updating_bookmark">Updating Bookmark</string>
    <string name="bookmark_updated">Bookmark updated!</string>
    <string name="bookmark_created">Bookmark added!</string>
    <string name="bookmark_deleted">Bookmark deleted!</string>
    <string name="details">Show details</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="share_via">Share with</string>
    <string name="delete">Delete</string>
    <string name="delete_bookmark">Delete Bookmark</string>
    <string name="delete_confirm">Are you sure you want to delete the bookmark \"%1$s\"?</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
</resources>